OVerflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
